[package]
name = "streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
lapin = "3.0.2"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"

[profile.fast]
inherits = "release"
incremental = true
